# one-more-big-beautiful-browser

./: .prettierignore  README.md  package.json  pnpm-lock.yaml  scripts.sh
extension/: .env.development  .env.example  .env.production  .gitignore  components.json  package.json  pnpm-lock.yaml  wxt.config.ts
extension/src/components/: ChatRoom.tsx  LoginPage.tsx
extension/src/config/: env.ts
extension/src/entrypoints/: auth-listener.content.ts  background.ts  content-api.content.ts  content.ts
extension/src/lib/: browser-tools.ts  conversation.ts  langgraph.ts  tool-messenger.ts
extension/src/styles/: messages.css
extension/src/types/: auth.ts  tools.ts
server/: .gitignore  main.py  pyproject.toml
server/src/: main.py
server/src/api/: models.py
server/src/api/routers/: chat.py  test.py
server/src/controllers/: chat_controller.py
server/src/core/: app.py  config.py  lifespan.py  middleware.py  routers.py  server.py
server/src/models/: __init__.py  chat.py
server/src/utils/: __init__.py  logging_config.py  streaming.py
web/: .firebaserc  .gitignore  AUTH_SETUP.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
web/app/: layout.tsx  page.tsx  providers.tsx
web/app/(auth)/: layout.tsx
web/app/dashboard/: page.tsx
web/components/: ChatComponent.tsx  icons.tsx  logout-button.tsx
web/controller/: auth-actions.ts  auth-controller.ts
web/data/: users.json
web/data/services/: auth-service.ts
web/lib/: chat-service.ts  fake-db.ts  firebase-admin.ts
web/src/: middleware.ts
web/types/: chat.ts
(+34 files in other folders)
